// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browser With image renders as expected 1`] = `
<div
  className="shadow-darken25 round bg-white"
>
  <div
    className="bg-gray h30-mm h18 round-t"
  >
    <div
      className="color-white flex flex--center-cross h30-mm h18 px6"
    >
      <span
        className="color-red-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
      <span
        className="color-yellow-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
      <span
        className="color-green-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
    </div>
  </div>
  <div
    className="block-mm none"
  >
    <div
      className="h30 bg-gray-lighter color-gray flex flex--space-between-main px6 flex--center-cross"
    >
      <div
        className="inline-flex flex--space-between-main flex--center-cross mr18 w70"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-arrow-left"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-arrow-left"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          arrow-left
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-arrow-right"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-arrow-right"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          arrow-right
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-rotate"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-rotate"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          rotate
        </span>
      </div>
      <div
        className="w120 h18 bg-white round-full flex-child-grow px12"
      />
      <div
        className="inline-flex flex--space-between-main align-r flex--center-cross ml18 w70"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-heart"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-heart"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          heart
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-mapbox"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-mapbox"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          mapbox
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-menu"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-menu"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          menu
        </span>
      </div>
    </div>
  </div>
  <img
    alt="Manage styles in Studio."
    className="round-b"
    src="../files/browser-example.png"
  />
</div>
`;

exports[`browser With video renders as expected 1`] = `
<div
  className="shadow-darken25 round bg-white"
>
  <div
    className="bg-gray h30-mm h18 round-t"
  >
    <div
      className="color-white flex flex--center-cross h30-mm h18 px6"
    >
      <span
        className="color-red-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
      <span
        className="color-yellow-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
      <span
        className="color-green-light"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-circle"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-circle"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          circle
        </span>
      </span>
    </div>
  </div>
  <div
    className="block-mm none"
  >
    <div
      className="h30 bg-gray-lighter color-gray flex flex--space-between-main px6 flex--center-cross"
    >
      <div
        className="inline-flex flex--space-between-main flex--center-cross mr18 w70"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-arrow-left"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-arrow-left"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          arrow-left
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-arrow-right"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-arrow-right"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          arrow-right
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-rotate"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-rotate"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          rotate
        </span>
      </div>
      <div
        className="w120 h18 bg-white round-full flex-child-grow px12"
      />
      <div
        className="inline-flex flex--space-between-main align-r flex--center-cross ml18 w70"
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-heart"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-heart"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          heart
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-mapbox"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-mapbox"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          mapbox
        </span>
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-menu"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-menu"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          menu
        </span>
      </div>
    </div>
  </div>
  <video
    autoPlay={true}
    className="block mx-auto round-b"
    loop={true}
    muted={true}
    src="../files/browser-example.mp4"
    title="animated GIF walking through how to filter a source layer by adding a vector source clicking Filter > Create filter > select a data field from the list provided > select a value from the list provided"
    type="video/mp4"
    width="100%"
  >
    Your browser doesn't support embedded videos.
  </video>
</div>
`;
